--- a/4. DI and NewsBase/appveyor.yml
+++ b/4. DI and NewsBase/appveyor.yml
@@ -5,3 +5,30 @@ cache: 
 before_build: nuget restore
 build:     
     publish_wap: true
+
+environment:
+  # these variables are common to all jobs
+  common_var1: value1
+  common_var2: value2
+
+  matrix:
+    # first group
+    - db: mysql
+      provider: mysql
+
+    # second group
+    - db: mssql
+      provider: mssql
+      password:
+        secure: DHEU39J6X9VD376==
+
+platform:
+  - x86
+  - Any CPU
+
+configuration:
+  - Debug
+  - Release
+
+matrix:
+  fast_finish: true
