--- a/4. Dependency injection/Infestation reports/appveyor.yml
+++ b/4. Dependency injection/Infestation reports/appveyor.yml
@@ -5,10 +5,10 @@ cache: 
 before_build: nuget restore
 environment:
   matrix:
-  - di_project: DI. FortuneTeller.csproj
-  - infestation_project: Infestation reports.csproj
+  - di_project: 4. Dependency injection.sln
+  - intro_project: 1.Introduction. Startup.sln
 build:
-    project: DI. FortuneTeller.csproj
-    project: Infestation reports.csproj
+    project: 4. Dependency injection.sln
+    project: 1.Introduction. Startup.sln
     parallel: true     
     publish_wap: true
