--- a/4. Dependency injection/appveyor.yml
+++ b/4. Dependency injection/appveyor.yml
@@ -5,9 +5,7 @@ cache: 
 before_build: nuget restore
 environment:
   matrix:
-  - di_project: DI. FortuneTeller.csproj
-  - infestation_project: Infestation reports.csproj
-build:
-    project: di_project
-    project: infestation_project
-    publish_wap: true
+  - project: 4. Dependency injection.sln
+build_script:
+  - cmd: msbuild %project%
+  
