--- a/4. Dependency injection/appveyor.yml
+++ b/4. Dependency injection/appveyor.yml
@@ -5,7 +5,7 @@ cache: 
 before_build: nuget restore
 environment:
   matrix:
-  - project: 4. Dependency injection.sln
+  - project: 4. Dependency injection\4. Dependency injection.sln
 build_script:
   - cmd: msbuild %project%
   
