--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,17 +4,17 @@ cache:
     - packages -> **\packages.config
 environment:
     matrix:
-    - solution: 1.Introduction. Startup.sln
-      full_project_name: 1.Introduction. Startup/1.Introduction. Startup.csproj
+    - solution: /1.Introduction. Startup.sln
+      full_project_name: /1.Introduction. Startup/1.Introduction. Startup.csproj
       
-    - solution: 3. MVC. NewsBase.sln
-      full_project_name: 3. MVC. NewsBase/3. MVC. NewsBase.csproj
+    - solution: /3. MVC. NewsBase.sln
+      full_project_name: /3. MVC. NewsBase/3. MVC. NewsBase.csproj
     
-    - solution: 4. Dependency injection.sln
-      full_project_name: 4. Dependency injection/DI. FortuneTeller/DI. FortuneTeller.csproj
+    - solution: /4. Dependency injection.sln
+      full_project_name: /4. Dependency injection/DI. FortuneTeller/DI. FortuneTeller.csproj
 
-    - solution: 4. Dependency injection.sln
-      full_project_name: 4. Dependency injection/Infestation reports/Infestation reports.csproj
+    - solution: /4. Dependency injection.sln
+      full_project_name: /4. Dependency injection/Infestation reports/Infestation reports.csproj
 
 before_build: nuget restore %solution%
 build: 
