--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,20 +4,20 @@ cache:
     - packages -> **\packages.config
 environment:
     matrix:
-    - solution: "1.Introduction. Startup"
+    - solution_file: "1.Introduction. Startup"
       full_project_name: "1.Introduction. Startup/1.Introduction. Startup.csproj"
       
-    - solution: "3.MVC. NewsBase"
+    - solution_file: "3.MVC. NewsBase"
       full_project_name: "3.MVC. NewsBase/3.MVC. NewsBase.csproj"
     
-    - solution: "4.Dependency injection"
+    - solution_file: "4.Dependency injection"
       full_project_name: "4.Dependency injection/DI. FortuneTeller/DI. FortuneTeller.csproj"
 
-    - solution: "4.Dependency injection"
+    - solution_file: "4.Dependency injection"
       full_project_name: "4.Dependency injection/Infestation reports/Infestation reports.csproj"
 
 before_build: 
-    nuget restore %solution%
+    nuget restore %solution_file%
 build: 
     project: '%full_project_name%'
     publish_wap: true
