--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,16 +5,16 @@ cache:
 environment:
     matrix:
     - solution_file: "1.Introduction. Startup"
-      full_project_name: "1.Introduction. Startup/1.Introduction. Startup.csproj"
+    - full_project_name: "1.Introduction. Startup/1.Introduction. Startup.csproj"
       
     - solution_file: "3.MVC. NewsBase"
-      full_project_name: "3.MVC. NewsBase/3.MVC. NewsBase.csproj"
-    
+    - full_project_name: "3.MVC. NewsBase/3.MVC. NewsBase.csproj"
+     
     - solution_file: "4.Dependency injection"
-      full_project_name: "4.Dependency injection/DI. FortuneTeller/DI. FortuneTeller.csproj"
+    - full_project_name: "4.Dependency injection/DI. FortuneTeller/DI. FortuneTeller.csproj"
 
     - solution_file: "4.Dependency injection"
-      full_project_name: "4.Dependency injection/Infestation reports/Infestation reports.csproj"
+    - full_project_name: "4.Dependency injection/Infestation reports/Infestation reports.csproj"
 
 before_build: 
     nuget restore %solution_file%
