--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ environment:
     - full_project_name: "4.Dependency injection/Infestation reports/Infestation reports.csproj"
 
 before_build: 
-    nuget restore %solution_file%
+    nuget restore %solution_file%.sln
 build: 
     project: '%full_project_name%'
     publish_wap: true
