--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,20 +4,20 @@ cache:
     - packages -> **\packages.config
 environment:
     matrix:
-    - solution_file: "1.Introduction. Startup"
+    - solution_file: "1.Introduction. Startup.sln"
     - full_project_name: "1.Introduction. Startup/1.Introduction. Startup.csproj"
       
-    - solution_file: "3.MVC. NewsBase"
+    - solution_file: "3.MVC. NewsBase.sln"
     - full_project_name: "3.MVC. NewsBase/3.MVC. NewsBase.csproj"
      
-    - solution_file: "4.Dependency injection"
+    - solution_file: "4.Dependency injection.sln"
     - full_project_name: "4.Dependency injection/DI. FortuneTeller/DI. FortuneTeller.csproj"
 
-    - solution_file: "4.Dependency injection"
+    - solution_file: "4.Dependency injection.sln"
     - full_project_name: "4.Dependency injection/Infestation reports/Infestation reports.csproj"
 
 before_build: 
-    nuget restore %solution_file%.sln
+    nuget restore %solution_file%
 build: 
     project: '%full_project_name%'
     publish_wap: true
