--- a/1.Introduction_StartupClass/1.Introduction_StartupClass/1.Introduction_StartupClass.csproj
+++ b/1.Introduction_StartupClass/1.Introduction_StartupClass/1.Introduction_StartupClass.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_1.Introduction._Startup</RootNamespace>
+    <RootNamespace>_1.Introduction_StartupClass</RootNamespace>
   </PropertyGroup>
 
 </Project>
