--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,11 +10,11 @@ environment:
     - solution_file: 3.NewsBase_MVC
       full_project_name: 3.NewsBase_MVC/3.NewsBase_MVC/3.NewsBase_MVC.csproj
      
-    - solution_file: 4.DI_Infestation
-      full_project_name: 4.DI_Infestation/DI. FortuneTeller/DI. FortuneTeller.csproj
+    - solution_file: 4.DI_and_Infestation
+      full_project_name: 4.DI_and_Infestation/DI. FortuneTeller/DI. FortuneTeller.csproj
 
-    - solution_file: 4.DI_Infestation
-      full_project_name: 4.DI_Infestation/Infestation_reports/Infestation_reports.csproj
+    - solution_file: 4.DI_and_Infestation
+      full_project_name: 4.DI_and_Infestation/Infestation_reports/Infestation_reports.csproj
 
 before_build: 
     nuget restore %solution_file%
