--- a/InfestationReports/InfestationReports/appsettings.json
+++ b/InfestationReports/InfestationReports/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "InfestationDbConnection": "Data Source=POLIMISHKA; Initial Catalog=InfestationProject; Integrated Security=SSPI;",
+    //"InfestationDbConnection": "Data Source=POLIMISHKA; Initial Catalog=InfestationProject; Integrated Security=SSPI;",
     "InfestationDbConnectionNew": "Server=POLIMISHKA;Database=InfestationProject;Trusted_Connection=True;"
   }
 }
