--- a/InfestationReports/REST_API_example/appsettings.json
+++ b/InfestationReports/REST_API_example/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "InfestationDbConnectionNew": "Server=POLIMISHKA;Database=InfestationProject;Trusted_Connection=True;"
-  }
+  "AllowedHosts": "*"
 }
