--- a/InfestationReports/InfestationReports/appsettings.json
+++ b/InfestationReports/InfestationReports/appsettings.json
@@ -9,5 +9,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "InfestationDbConnectionNew": "Server=POLIMISHKA;Database=InfestationProject;Trusted_Connection=True;"
+  },
+  "Infestation": {
+    "GoogleSmtpServer": "smtp.gmail.com",
+    "PhoneNumbers": {
+      "FromPhone": "+13343266271",
+      "ToPhone": "+380508375475"
+    },
+    "Emails": {
+      "FromEmail": "mmpolishchuk@gmail.com",
+      "ToEmail": "clashaccaunt000@gmail.com"
+    },
+    "CancelSending": "false"
   }
 }
