--- a/InfestationReports/InfestationReports/InfestationReports.csproj
+++ b/InfestationReports/InfestationReports/InfestationReports.csproj
@@ -49,6 +49,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RestSharp" Version="106.11.5-alpha.0.2" />
     <PackageReference Include="Twilio" Version="5.43.0" />
   </ItemGroup>
 
