--- a/InfestationReports/InfestationReports/appsettings.json
+++ b/InfestationReports/InfestationReports/appsettings.json
@@ -20,6 +20,9 @@
       "FromEmail": "mmpolishchuk@gmail.com",
       "ToEmail": "clashaccaunt000@gmail.com"
     },
-    "CancelSending": "false"
+    "CancelSending": "false",
+    "ExpirationCacheTime": 1,
+    "DelayTime": 30,
+    "ContentType": "image/jpeg"
   }
 }
